Create working New Dads repo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="New-Dads.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -50,7 +50,7 @@
 <h2 id="topics">SOME TOPICS WE DISCUSS</h2>
     <div class="topics">
         <div class="container2">
-             <img src="pic7.jpg" alt="">
+             <img src="./Images/Images/pic7.jpg" alt="">
                 <ul>
                     <li>Paradoxes of parenting</li>
                     <li>All joy, no fun</li>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="container2">
-                <img src="quokkabottles-tNQIGigTRI8-unsplash.jpg" alt="">
+                <img src="./Images/Images/quokkabottles-tNQIGigTRI8-unsplash.jpg" alt="">
                 <ul>
                     <li>Fear in new beginnings</li>
                     <li>Can I be better than my Dad?</li>
@@ -67,7 +67,7 @@
                 </ul>
         </div>
         <div class="container2">
-            <img src="pic9.jpg" alt="">
+            <img src="./Images/Images/pic9.jpg" alt="">
             <ul>
                 <li>Am I good enough to be a Dad?</li>
                 <li>Where's my freedom?</li>
@@ -106,17 +106,17 @@
 <h2 class="books">Suggested Reading for New Dads</h2>
 <div class="topics">
     <div class="conainer2">
-        <img src="Book1.jpg" alt="" class="book">
+        <img src="./Images/Images/Book1.jpg" alt="" class="book">
         <h4>Price: $6.95</h4>
         <a href="https://www.amazon.com/Were-Pregnant-First-Pregnancy-Handbook/dp/1939754682/ref=sr_1_1?keywords=we+re+pregnant&qid=1654547419&sprefix=we%3Bre+prg%2Caps%2C68&sr=8-1" target="_blank">Purchase</a>
     </div>
     <div class="conainer2">
-        <img src="Book2.jpg" alt="" class="book">
+        <img src="./Images/Images/Book2.jpg" alt="" class="book">
         <h4>Price: $13.49</h4>
         <a href="https://www.amazon.com/Ultimate-Baby-Book-New-Dads/dp/1648766285/ref=sr_1_1?crid=10LI4TBPRLQO9&keywords=ultimate+baby+book+for+new+dads&qid=1654547473&sprefix=ultimate+baby+book+for+new+dad%2Caps%2C107&sr=8-1" target="_blank">Purchase</a>
     </div>
     <div class="conainer2">
-        <img src="Book3.jpg" alt="" class="book">
+        <img src="./Images/Images/Book3.jpg" alt="" class="book">
         <h4>Price: $14.95</h4>
         <a href="https://www.amazon.com/Being-Dad-Weird-Lessons-Fatherhood-ebook/dp/B01M00R0W1/ref=sr_1_1?keywords=being+a+dad+is+weird&qid=1654547501&sprefix=ulbeing+a+dad+is+we%2Caps%2C53&sr=8-1" target="_blank">Purchase</a>
     </div>
